--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -1,3 +1,5 @@
+@import '../../assets/fonts/pretendard.css';
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -47,4 +49,4 @@ table {
   border-spacing: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@200;400;500;600;800&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@200;400;500;600;800&display=swap');*/
