--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -49,4 +49,4 @@ table {
   border-spacing: 0;
 }
 
-/*@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@200;400;500;600;800&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@200;400;500;600;800&display=swap');
